# CodeForcesSolutions

./: .gitignore  CMakeLists.txt  ConestResultMerger.py  README.md  conan_profile.txt  conanfile.txt
2021/PizzaForces/: CMakeLists.txt  GeneratedPizzaForcesRunner.cc  Pizza.cc  Pizza.h  PizzaForces.cc  PizzaForces.h  PizzaForcesRunner.cc  PizzaForcesTests.cc
2021/TwoTables/: TaskDescription.md
2021/UpTheStripSimplified/: CMakeLists.txt  Description.md  StripInput.h  UpTheStripSimplified.cc  UpTheStripSimplified.h  UpTheStripSimplifiedRunner.cc  UpTheStripSimplifiedTests.cc
2021/WhoIsOpposite/: CMakeLists.txt  CircleData.h  Description.md  ResultWhoIsOppositeRunner.cc  WhoIsOpposite.cc  WhoIsOpposite.h  WhoIsOppositeRunner.cc  WhoIsOppositeTests.cc
conan-build/: conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt
